test-plugin: Call notify_init()

Call notify_init() in test-plugin.h, so that the gsd-tst-* wrapper programs can
use notifications just like the plugins can when running under the real daemon.

https://bugzilla.gnome.org/show_bug.cgi?id=685936